--- a/src/components/ImageList/ImageList.css
+++ b/src/components/ImageList/ImageList.css
@@ -1,9 +1,17 @@
 .card{
     margin-bottom: 3vh;
     margin-top: 3vh;
-    max-width: 50vw;
+    width: 50vw;
 }
 .media {
     height: 50vh;
-    width: 100%;
-  }
+}
+
+.image-content{
+    display: flex;
+    width: 100% !important;
+    background-color: grey;
+}
+.flex-space{
+    flex: 1 0 auto !important;
+}
